content/terraform-plugin-testing/v1.8.x/docs/plugin/testing/acceptance-tests/known-value-checks/float64.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Float64 Value Checks for use with Plan Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-01-01T00:00:00.000Z
last_modified: 2023-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Float64 Known Value Checks

The known value checks that are available for float64 values are:

* [Float64Exact](/terraform/plugin/testing/acceptance-tests/known-value-checks/float64#float64exact-check)

## `Float64Exact` Check

The [Float64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Exact) check tests that a resource attribute, or output value has an exactly matching float64 value.

Example usage of [Float64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Exact) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Float64(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
        	    // Example resource containing a computed float64 attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.Float64Exact(1.23),
						),
					},
				},
			},
		},
	})
}
```
