content/terraform-plugin-testing/v1.12.x/docs/plugin/testing/acceptance-tests/known-value-checks/float64.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Float64 Value Checks for use with Plan and State Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-19T09:28:23-04:00
last_modified: 2025-03-19T09:28:23-04:00
# END AUTO GENERATED METADATA
---

# Float64 Known Value Checks

The known value checks that are available for float64 values are:

* [Float64Exact](/terraform/plugin/testing/acceptance-tests/known-value-checks/float64#float64exact-check)
* [Float64Func](/terraform/plugin/testing/acceptance-tests/known-value-checks/float64#float64func-check)

## `Float64Exact` Check

The [Float64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Exact) check tests that a resource attribute, or output value has an exactly matching float64 value.

Example usage of [Float64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Exact) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Float64(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
        	    // Example resource containing a computed float64 attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.Float64Exact(1.23),
						),
					},
				},
			},
		},
	})
}
```

## `Float64Func` Check

The [Float64Func](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Func) check allows defining a custom function to validate whether the float64 value of a resource attribute or output satisfies specific conditions.

Example usage of [Float64Func](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Float64Func) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/state-checks/resource) state check.

```go
func TestExpectKnownValue_CheckState_Float64Func(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
				// Example resource containing a float64 attribute named "configurable_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigStateChecks: []statecheck.StateCheck{
					statecheck.ExpectKnownValue(
						"test_resource.one",
						tfjsonpath.New("configurable_attribute"),
						knownvalue.Float64Func(func(v float64) error {
							if v > 1.0 && v < 5.0 {
								return fmt.Errorf("value must be between 1.0 and 5.0")
							}
							return nil
						}),
					),
				},
			},
		},
	})
}
```